yacc/examples/ex4/precedencia.output
Terminals which are not used

   UNITMINUS


Grammar

    0 $accept: expr_list $end

    1 expr_list: expr_list expr_part
    2          | expr_part

    3 expr_part: expr SEMI

    4 expr: NUMBER
    5     | expr PLUS expr
    6     | expr MINUS expr
    7     | expr TIMES expr
    8     | LPAREN expr RPAREN
    9     | MINUS expr


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMI (258) 3
LPAREN (259) 8
RPAREN (260) 8
NUMBER (261) 4
PLUS (262) 5
MINUS (263) 6 9
TIMES (264) 7
UNITMINUS (265)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
expr_list (12)
    on left: 1 2, on right: 0 1
expr_part (13)
    on left: 3, on right: 1 2
expr (14)
    on left: 4 5 6 7 8 9, on right: 3 5 6 7 8 9


state 0

    0 $accept: . expr_list $end

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr_list  go to state 4
    expr_part  go to state 5
    expr       go to state 6


state 1

    8 expr: LPAREN . expr RPAREN

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr  go to state 7


state 2

    4 expr: NUMBER .

    $default  reduce using rule 4 (expr)


state 3

    9 expr: MINUS . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr  go to state 8


state 4

    0 $accept: expr_list . $end
    1 expr_list: expr_list . expr_part

    $end    shift, and go to state 9
    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr_part  go to state 10
    expr       go to state 6


state 5

    2 expr_list: expr_part .

    $default  reduce using rule 2 (expr_list)


state 6

    3 expr_part: expr . SEMI
    5 expr: expr . PLUS expr
    6     | expr . MINUS expr
    7     | expr . TIMES expr

    SEMI   shift, and go to state 11
    PLUS   shift, and go to state 12
    MINUS  shift, and go to state 13
    TIMES  shift, and go to state 14


state 7

    5 expr: expr . PLUS expr
    6     | expr . MINUS expr
    7     | expr . TIMES expr
    8     | LPAREN expr . RPAREN

    RPAREN  shift, and go to state 15
    PLUS    shift, and go to state 12
    MINUS   shift, and go to state 13
    TIMES   shift, and go to state 14


state 8

    5 expr: expr . PLUS expr
    6     | expr . MINUS expr
    7     | expr . TIMES expr
    9     | MINUS expr .

    $default  reduce using rule 9 (expr)


state 9

    0 $accept: expr_list $end .

    $default  accept


state 10

    1 expr_list: expr_list expr_part .

    $default  reduce using rule 1 (expr_list)


state 11

    3 expr_part: expr SEMI .

    $default  reduce using rule 3 (expr_part)


state 12

    5 expr: expr PLUS . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr  go to state 16


state 13

    6 expr: expr MINUS . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr  go to state 17


state 14

    7 expr: expr TIMES . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3

    expr  go to state 18


state 15

    8 expr: LPAREN expr RPAREN .

    $default  reduce using rule 8 (expr)


state 16

    5 expr: expr . PLUS expr
    5     | expr PLUS expr .
    6     | expr . MINUS expr
    7     | expr . TIMES expr

    TIMES  shift, and go to state 14

    $default  reduce using rule 5 (expr)


state 17

    5 expr: expr . PLUS expr
    6     | expr . MINUS expr
    6     | expr MINUS expr .
    7     | expr . TIMES expr

    TIMES  shift, and go to state 14

    $default  reduce using rule 6 (expr)


state 18

    5 expr: expr . PLUS expr
    6     | expr . MINUS expr
    7     | expr . TIMES expr
    7     | expr TIMES expr .

    $default  reduce using rule 7 (expr)
